   * Unit names and genders are synced between games and replays.
   * Play/stop buttons are disabled again at the end of a replay.
   * The 'reset replay' button works correctly and does not cause OOS
     errors any more.
 * User interface:
   * Added a party full bell to the MP game configuration screen, played once
     all human player slots have been taken.
 * WML engine:
   * WML variable turn_number is set correctly (to 1) in prestart and start
     events.  Previously, it retained its last value from the previous scenario
     until after the start event.
   * [scroll_to] and [scroll_to_unit] now take an optional side filter.
   * [trait] now accepts a "generate_description=" attribute, allowing the
     auto-generated effect descriptions to be turned off. 
 * Miscellaneous and bug fixes:
   * Pango markup is applied correctly and consistently in button tooltips.

Version 1.11.7:
 * Add-ons client:
   * Add-ons downloaded with clients from this version onwards are shown
     in the Remove Add-ons with their original titles from the add-ons
     server now, instead of artificially generating titles by replacing
     underscores from file names.
   * Fixed color key disparities between the Add-ons Manager dialog and the
     add-on Description dialog.
   * It is now possible to choose the neutral/fallback add-on sorting in
     the Add-ons Manager dialog used when no columns have been sorted by
     the user.
   * Report errors caused by faulty local .pbl files properly instead of
     presenting them as network errors.
   * Fixed regression from 1.11.0 resulting in memory leaks and/or
     crash-to-desktop situations when failing to connect to an add-ons
     server.
 * Add-ons server:
   * Implemented read-only mode option (read_only boolean attribute in
     server config WML, defaults to "no").
 * AI:
   * Recruitment CA:
     * New Recruitment CA located in src/ai/recruitment is now default CA