@@ -30,6 +30,7 @@ Version 1.11.7+dev:
  * User interface:
    * Added a party full bell to the MP game configuration screen, played once
      all human player slots have been taken.
+   * Change layout for advertized games in the MP lobby and add map icon.
 
 
 Version 1.11.7:
