@@ -31,6 +31,7 @@ Version 1.11.7+dev:
  * User interface:
    * Added a party full bell to the MP game configuration screen, played once
      all human player slots have been taken.
+   * Change layout for advertized games in the MP lobby and add map icon.
  * WML engine:
    * WML variable turn_number is set correctly (to 1) in prestart and start
      events.  Previously, it retained its last value from the previous scenario
